style.css
@font-face {
  font-family: 'Zorque Regular';
  src: url('zorque.regular.ttf')  format('truetype');
}

html {
  overflow: hidden;
}

#mainframe {
  position: relative;
  margin: auto;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 310px;
  background-color: #26263D;
  border-radius: 10px;
}

#ground {
  position: absolute;
  height: 100px;
  width: 100%;
  left: 0;
  bottom: 0;
  border-top: 1px solid black;
  border-left: 1px solid black;
  border-right: 0px solid white;
  border-radius: 10px 10px 10px 10px;
  background-color: sandybrown;
}

#startingframe {
  position: relative;
  margin: auto;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 310px;
  background-color: rgb(16, 16, 24);
  border-radius: 10px;
  border: 1px solid white;
  text-align: center;
  box-shadow: 100;
  z-index: 10;
}

#startingground {
  position: absolute;
  height: 100px;
  width: 100%;
  left: 0;
  bottom: 0;
  border-radius: 10px 10px 10px 10px;
  z-index: 10;
}

#starttext {
  font-family: 'Zorque Regular';
  color: white;
  top: 200px;
  font-size: 65px;
  z-index: 10;
}

#Flash_Games {
  border: 0;
  width: 100%;
  height: 1000px;
  margin: auto;
}

#My_Game {
  position: relative;
  margin: auto;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 310px;
  background-color: #26263D;
  border-radius: 10px;
}

.switcher_button {
  display: inline-block;
  font-size: large;
  font-family: "Bitter",serif;
  line-height: 1;
  color: rgb(78, 77, 77);
  background-color: #c7c7c7;
  text-shadow: -1px 1px #a3aab1;
  border-radius: 10px;
  border-color: #817a7a;
}

.switcher_button:hover {
  cursor: pointer;
  border-color: #8b9299;
  color: #4e4c4c;
  background-color: #aca0a0;
}

.switcher_button:active {
  background-color: #817a7a;
}

